--- a/ex2.html
+++ b/ex2.html
@@ -26,6 +26,17 @@
     <script>
         var square=true;
        // add code here
+       function changeShape() {
+        const div1Elem = dcoument.getElementsById("div1");
+        if (square) {
+            div1Elem.style.borderRadius = "50%"; 
+        }
+        else {
+            div1Elem.style.borderRadius = "0%";
+        }
+        square = !square;
+
+       }
         
     </script>
 
