complete and update ex 2

--- a/ex2.html
+++ b/ex2.html
@@ -27,7 +27,7 @@
         var square=true;
        // add code here
        function changeShape() {
-        const div1Elem = dcoument.getElementsById("div1");
+        const div1Elem = document.getElementById("div1");
         if (square) {
             div1Elem.style.borderRadius = "50%"; 
         }
