--- a/ex2.html
+++ b/ex2.html
@@ -32,7 +32,7 @@
             div1Elem.style.borderRadius = "50%"; 
         }
         else {
-            div1Elem.style.borderRadius = "0%";
+            div1Elem.style.borderRadius = "0px";
         }
         square = !square;
 
