--- a/ex4.html
+++ b/ex4.html
@@ -11,19 +11,44 @@
 
    <input type="text" id="inputText">
    <!-- add a button here for adding new item -->
+    <button id="addBtn" onclick="addItem()">Enter</button>
 
    <ul>
-      <li>Notebook<!--<button>Delete</button></li>-->
-      <li>Jello</li>
-      <li>Spinach</li>
-      <li>Rice</li>
-      <li>Birthday Cake</li>
-      <li>Candles</li>
+      <li>Notebook<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Jello<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Spinach<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Rice<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Birthday Cake<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Candles<button onclick="removeItem(this.parentNode)">Delete</button></li>
    </ul>
 
    <script>
 
       // add code here
+      function addItem() {
+         const newItem = document.getElementById("inputText").value;
+         const ulElem = document.getElementsByTagName("ul")[0];
+         const liElem = document.createElement("li");
+         liElem.innerText = newItem;
+         ulElem.appendChild(liElem);
+         // add delete button for new item 
+         const btnElem = document.createElement("button");
+         btnElem.innerText = "Delete";
+         liElem.appendChild(btnElem);
+         btnElem.addEventListener("click", function(){
+            this.parentNode.remove();
+         } );
+
+
+
+      }
+
+      function removeItem(obj) {
+         obj.remove();
+
+      }
+      
+
 
    </script>
 
