--- a/ex5.html
+++ b/ex5.html
@@ -15,6 +15,14 @@
         }
 
         /* Add CSS code here */ 
+        #square {
+            width: 150px; 
+            height: 150px;
+            border-radius: 0%;
+            background-color: goldenrod;
+            text-align: center;
+            padding-top: 60px;
+        }
 
     </style>
 </head>
@@ -26,6 +34,13 @@
         
         <script>
            // add code here
+           function mOver(obj) {
+            obj.id = "square";
+           }
+
+           function mOut(obj) {
+            obj.id = "circle";
+           }
         </script>
                 
 </body>
